Flask_mysql_app/nginx/ingree-route/ingress-nginx-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: ingress-for-flask-service
spec:
  tls:
  - hosts:
    - localhost
    secretName: marcel-tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: flask-service
          servicePort: 5000
